# VortX

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  README.md  ROADMAP.md  THIRD-PARTY-NOTICES.md  TRADEMARK.md
.github/: dependabot.yml
.github/workflows/: android.yml  codeql.yml  desktop.yml  mpvkit-watch.yml  release-tvos.yml  security.yml
android/: .gitignore  build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
app/: project.yml
app/Config/: VortXEdge.xcconfig.example
app/Resources/: Info-iOS.plist  Info-macOS.plist  Localizable.xcstrings
app/ResourcesTV/: Info-tvOS.plist
app/Sources/: ExternalPlayer.swift  NodeServer.swift  PlayerScreen.swift  StremioXApp.swift
app/SourcesShared/: Addon.swift  AddonTerms.swift  AddonTombstones.swift  AddonsView.swift  ApiKeys.swift  AppLanguage.swift  BackToTopButton.swift  CatalogPreferences.swift  CollectionsHubModel.swift  CommunityTrickplay.swift  CoreBridge.swift  CoreModels.swift  DebridKeys.swift  DebridResolver.swift  DiagnosticsLog.swift  DownloadManager.swift  DownloadModels.swift  DownloadStore.swift  ERDBConfig.swift  FanartClient.swift  FullscreenPlaybackGate.swift  LandscapeBackdropCache.swift  LastStreamStore.swift  LibraryTombstones.swift  MDBListClient.swift  MediaServerProvider.swift  MetadataKeysView.swift  PosterImageLoader.swift  Profiles.swift  ProfilesView.swift  ProviderBrandLogo.swift  ReleaseCalendarModel.swift  RemoteConfig.swift  ScrubThumbnails.swift  SeekBarStyle.swift  SettingsBackup.swift  SkipDBClient.swift  SkipDBSubmitView.swift  SourceIndexClient.swift  SourceListModel.swift  (+23 more)
app/SourcesTV/: BrowseGridView.swift  DetailView.swift  DiscoverView.swift  HomeView.swift  LibraryView.swift  LoginView.swift  OpenLinkView.swift  ProfilesView.swift  RootTabView.swift  SettingsView.swift  SharedUI.swift  StremioTVApp.swift  TVEpisodePanel.swift  (+1 more)
core/: Cargo.toml
desktop/: index.html
docs/: ANDROID-PLAN.md
scripts/: check_dv_init.py  fetch-server-deps.sh  patch-server-yt.sh
vortx-core/: Cargo.toml
vortx-core/crates/addons/: Cargo.toml
vortx-core/crates/addons/src/: collection.rs  lib.rs  router.rs
vortx-core/crates/hive/: Cargo.toml
vortx-core/crates/hive/src/: fact.rs  identity.rs  lib.rs  trust.rs
vortx-core/crates/playback/: Cargo.toml
vortx-core/crates/playback/conformance/: sprite_vectors.json
vortx-core/crates/playback/src/: fact.rs  lib.rs  model.rs  resolve.rs  sprite.rs
vortx-core/crates/playback/tests/: conformance.rs  properties.rs
vortx-core/crates/reco/: Cargo.toml
vortx-core/crates/reco/conformance/: feature_keys.json
vortx-core/crates/reco/src/: feature.rs  lib.rs  recommend.rs  taste.rs
vortx-core/crates/reco/tests/: conformance.rs  properties.rs
webapp/: package-lock.json  package.json
(+135 files in other folders)
