[package]
name = "vortx-addons"
description = "VortX installed-add-on collection + capability routing: which add-ons answer a given (resource, type, id). Built on vortx-protocol so the whole Stremio add-on ecosystem plugs into one engine."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
vortx-protocol = { path = "../protocol" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
