[package]
name = "vortx-hive"
description = "VortX federation/hive data model: ed25519 node identity, signed CacheFacts (canonical-byte signing, LWW+TTL CRDT merge), the >=3-signer trust evaluator, and the node-as-Source contract types. Pure, no networking; the public-plane source-fact layer that lets self-hosted nodes share facts (never tokens)."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# ed25519 (BSD-3), sha2 + base64 + getrandom (MIT/Apache-2.0): all compatible with GPL-3.0-or-later.
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
