[package]
name = "vortx-playback"
description = "VortX engine-owned playback-assets layer: trickplay sprite tracks, skip-intro/outro markers, and chapters with a deterministic multi-source fallback planner (embedded -> provider -> hive -> on-device floor that never misses) and signed, privacy-safe AssetFacts reusing the vortx-hive identity/CRDT/trust model. Pure: no HTTP/async; ffmpeg sprite generation and the axum serving route are a later phase."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
vortx-hive = { path = "../hive" }
vortx-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1"
