[package]
name = "vortx-reco"
description = "VortX in-engine recommendation system: pure, deterministic, per-profile, explainable, privacy-first. Per-title feature vectors + an implicit-feedback taste profile (recency-decayed, with a real NEGATIVE signal) + a candidate->score->MMR-diversify->explain pipeline that beats static TMDB/MDBList similar. The hive item-item co-occurrence collaborative layer is a later phase."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
vortx-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest = "1"
